Fixing after modernizer update